- Updated .CHANGES.NEW with new version # and link to docs
- Updated .RELEASE.NOTES with new version # and link to docs
- Added NEW doc/unreal32docs.html Docs
- Fixed an oper::swhois bug where the swhois was not propagated reported by FrostByghte
  (#0000247)
- Converted cr/lf to just lf in doc/unrea32docs.html
- Fixed a bug where set {} info wasn't cleared out at rehash
- Removed .NEW_CONFIG referenced from the win32 installer scripts
- Removed LEAST_IDLE, wtf did that do in the first place?
- Added version flags (O and o) for oper override and oper override verify
- FAKE_LAG_FOR_LOCOPS define added in config.h - enables local ops to
  override RFC1459 flood control
- Fixed grammar error thanks to MorPheus
- Fixed halfops kicking halfops bug thanks to Jim_
- Fixed a typo in /akill and /rakill obsolete depreciation notices reported by zak (#0000272)
- Added set::ssl::certificate and set::ssl::key to point to where we got the certificate
  PEM and the private key PEM
- Fixed a /invite bug where remote clients couldn't be invited, reported by Alzirr (#0000275)
- Fixed a bug where if the hostname didn't have a dot (ie. localhost) host cloaking broke
  reported by Ron885
- Rewrote /helpop to work as advertised, reported by FrostByghte (#0000217)
- Fixed a set {} memory leak on /rehash
- Made it so Unreal can still be launched by clicking wircd.exe when in NT service mode
- Stripped the docs. 100kb down, but a reformat in something other than MS
  word would really really help.
- Changed version to beta12
- Add config option to the unreal service utility options are:
  unreal config startup auto|manual
    auto starts the service when the pc boots, manual requires you to run Unreal manually
  unreal config crashrestart delay (2k/XP only)
    specifies how long to wait after a crash to restart Unreal (in minutes). If no delay is
    specified, no action is taken when a crash occurs
- Made some changes to the win32 resolver, hopefully this will fix the crash bugs