@@ -222,8 +222,17 @@ VOIDSIG s_die()
 	for (i = LastSlot; i >= 0; i--)
 		if ((cptr = local[i]) && DBufLength(&cptr->sendQ) > 0)
 			(void)send_queued(cptr);
+	if (!IsService)
 #endif
 	exit(-1);
+#ifdef _WIN32
+	else {
+		SERVICE_STATUS status;
+		SC_HANDLE hSCManager = OpenSCManager(NULL, NULL, SC_MANAGER_ALL_ACCESS);
+		SC_HANDLE hService = OpenService(hSCManager, "UnrealIRCd", SERVICE_STOP); 
+		ControlService(hService, SERVICE_CONTROL_STOP, &status);
+	}
+#endif
 }
 
 #ifndef _WIN32
